# cii-exercise

./: CMakeLists.txt  LICENSE  README.md  main.c
inc/: arith.h  atom.h  debug.h  except.h  hashtable.h  hset.h  list.h  mem.h  set.h  table.h  util.h
src/: arith.c  atom.c  debug.c  except.c  hashtable.c  hset.c  list.c  mem.c  set.c  table.c  util.c
